# AI-skills

cmake-skill/: README.md  SKILL.md  USAGE_GUIDE_EN.md  test_examples.sh
cmake-skill/evals/: evals.json
cmake-skill/examples/: README.md
cmake-skill/examples/consumer/: CMakeLists.txt  main.cpp
cmake-skill/examples/fetchcontent/: CMakeLists.txt  main.cpp
cmake-skill/examples/functions-macros/: CMakeLists.txt
cmake-skill/references/: README.md  cpack.md  ctest.md  debugging.md  examples.md  fetchcontent.md  find-package.md  functions-macros.md  pitfalls.md  quick-reference.md  targets.md
cmake-skill/templates/: Config.cmake.in
custom-commands/: sofa-add-fetched.md
